--- a/login/style.css
+++ b/login/style.css
@@ -68,40 +68,119 @@ body {
 }
 
 .caja_son {
-    position: relative;
+    flex-direction: column;
+    display: flex;
+    position: absolute;
     background-image: url(fondo3.jpg);
     border-radius: 8px;
     z-index: 10;
     background-size: cover;
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    padding: 50px 40px;
+    inset: 2px;
 }
 
-.inputbox {
+.login {
     position: relative;
     width: 300px;
     margin-top: 35px;
 }
 
-.inputbox input {
+.login input {
     position: relative;
     width: 100%;
     padding: 20px 10px 10px;
-}
-.sign {
-    margin: 25px auto;
-    height: 17px;
-    display: flex;
-    justify-content: center;
-    color: #ffffff;
+    background: transparent;
+    outline: none;
+    border: none;
+    color: #23242a;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    z-index: 10;
 }
 
-.inputbox span {
-    display: block;
+.login span {
     text-align: left;
-    margin-left: 10px;
+    position: absolute;
+    left: 0;
+    padding: 20px 0px 10px;
+    font-size: 1em;
+    color: #8f8f8f;
+    pointer-events: none;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+  
+}
+
+.login input:valid ~ span,
+.login input:focus ~ span {
+    color: #45f3ff;
+    transform: translateX(0px) translateY(-34px);
+    font-size: 0.75em;
+}
+
+.login i {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 86%;
+    height: 2px;
+    background: #45f3ff;
+    border-radius: 4px;
+    transition: 0.5s;
+    pointer-events: none;
+    z-index: 9;
+}
+
+.login input:valid ~ i,
+.login input:focus ~ i {
+    height: 44px;
+}
+
+.bm {
+    position: relative;
+    width: 100%;
+    letter-spacing: 0.05em;
+    margin-top: 10px;
+}
+
+.link {
+    display: flex;
+    box-sizing: border-box;
+    justify-content: space-between;
+}
+
+.link a {
+    margin: 10px 0;
+    font-size: 0.75em;
+    color: #8f8f8f;
+    text-decoration: none;
+}
+
+.link a:hover,
+.link a:nth-child(2) {
+    color: #45f3ff;
+} 
+
+.sign {
+    color: #ffffff;
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: 0.1em;
+}
+
+input[type="submit"] {
+    border: none;
+    outline: none;
+    background: #45f3ff;
+    padding: 11px 25px;
+    width: 100px;
+    margin-top: 10px;
+    border-radius: 4px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+input[type="submit"]:active {
+    opacity: 0.9;
 }
 
